--- a/pages/Transport/Transport.wxss
+++ b/pages/Transport/Transport.wxss
@@ -1,5 +1,9 @@
 @import "../common/weui.wxss";
 
+/* Page {
+  background-color: #7acfa6;
+} */
+
 page, .page, .page__bd {
   height: 100%;
   background-color: #fff;
@@ -35,8 +39,34 @@ image {
   vertical-align: middle;
 }
 
+.setCenter {
+  text-align: center;
+  padding-top: 30px;
+}
+
 /* preview代码   */
 
 .weui-form-preview {
   margin-bottom: 25px;
+}
+
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
+}
+
+.ykt-detail-wraper {
+  display: flex;
+  flex-direction: column;
+  margin: 0 30rpx 30rpx;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
 }
