--- a/pages/bookSearch/index.wxss
+++ b/pages/bookSearch/index.wxss
@@ -1,6 +1,41 @@
 /* pages/bookSearch/index.wxss */
 @import "../common/weui.wxss";
 
+@keyframes kf-marque-animation {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-33.3%);
+  }
+}
+
+.marquee {
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  background: #f1f368bb;
+  color: rgb(238, 149, 16);
+  border: none;
+  display: block;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: clip;
+  position: relative;
+  font-size: 28rpx;
+}
+
+.marquee .content {
+  display: inline-block;
+  position: relative;
+  padding-right: 0px;
+  /* 跑马灯设置 */
+  animation: kf-marque-animation 30s linear infinite;
+  white-space: nowrap;
+}
+
 .logo-sub {
   text-align: center;
   margin-top: 50rpx;
@@ -28,5 +63,5 @@
 }
 
 .weui-panel__bd {
-  margin-top: -80rpx;
+  padding-top: -80rpx;
 }
