--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,21 +1,51 @@
-<view class='page'>
-  <view class='setCenter'>
-    <text>\n</text>
-    <view class="weui-article__h2">现在是：{{time}}</view>
-    <image src='https://airmole.cn/wechat/wxapp/images/17-18IIcalendar.jpg' mode='widthFix'></image>
-  </view>
-  <!-- <view class="weui-cells__tips setCenter">{{BottomTip}}</view> -->
-  <view class="weui-btn-area">
-    <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
-      <image class="weui-btn shareIcon" src='/images/share_green.png'></image>
-      分享校历给朋友
-    </button>
-  </view>
-  <view class="weui-footer">
-    <view class="weui-footer__links">
-      <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
-      <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+<view class="page">
+  <view class="page__bd">
+    <view class="weui-tab">
+      <view class="weui-navbar">
+        <block wx:for="{{tabs}}" wx:key="*this">
+          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+            <view class="weui-navbar__title">{{item}}</view>
+          </view>
+        </block>
+        <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
+      </view>
+      <view class="weui-tab__panel">
+        <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
+          <view class='page'>
+            <view class='setCenter'>
+              <text>\n</text>
+              <view class="weui-article__h2">现在是：{{time}}</view>
+              <image src='https://airmole.cn/wechat/wxapp/images/18-19I.png' mode='widthFix'></image>
+            </view>
+            <button open-type="share" class="login-btn">
+              <text>分享校历给同学</text>
+            </button>
+            <view class="weui-footer">
+              <view class="weui-footer__links">
+                <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
+                <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+              </view>
+              <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
+            </view>
+          </view>
+        </view>
+        <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+          <view class='page'>
+            <view class='setCenter'>
+              <text>\n</text>
+              <view class="weui-article__h2">建议手机横屏观看</view>
+              <image src='https://airmole.cn/wechat/wxapp/images/SchoolMap.png' mode='widthFix'></image>
+            </view>
+            <view class="weui-footer">
+              <view class="weui-footer__links">
+                <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
+                <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+              </view>
+              <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
+            </view>
+          </view>
+        </view>
+      </view>
     </view>
-    <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
   </view>
 </view>
