--- a/pages/tel/departmentTel/departmentTel.wxml
+++ b/pages/tel/departmentTel/departmentTel.wxml
@@ -3,26 +3,35 @@
 <view class="page">
   <view class="page__hd">
     <view class="page__title">各系部联系电话</view>
-    <view class="page__desc"><text>学校各系、各部门办公联系电话\n\r点击号码可以直接拨打，长按号码复制到粘贴版</text></view>
+    <view class="page__desc" style='color:#000;'>
+      <text>学校各系、各部门办公联系电话\n\r点击号码可以直接拨打，长按号码复制到粘贴版</text>
+    </view>
   </view>
-  <view class="page__bd" style='padding-bottom:0px;'>
-    <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callPhone' catchlongpress="copyIt">
-        <view class="weui-cell__hd">
-          <image src="/images/tel.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
-        <view class="weui-cell__bd">{{item.name}}</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}'>{{item.tel}}</view>
+
+  <view class="ykt-detail-wraper">
+    <view class="detail-list" wx:for="{{telNumber}}" wx:key="telList">
+      <view class="detail-item">
+        <text class="detail-item-label">{{item.name}}</text>
+        <text class="detail-item-value" id='{{item.tel}}' bindtap='callPhone' bindlongtap="copyIt">{{item.tel}}</text>
       </view>
     </view>
     <view class="weui-cells__tips">外地用户请加拨天津长途区号 022</view>
   </view>
-   <view class="weui-btn-area">
-    <button plain='true' open-type="share" type="default" over-class="other-button-hover">
-      <image class="weui-btn btnIcon" src='/images/share_green.png'></image>
-      <text>有用，分享通讯录给朋友</text>
-    </button>
-  </view> 
+  <!-- <view class="page__bd" style=' padding-bottom:0px; '>
+    <view class="weui-cells weui-cells_after-title">
+      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callPhone ' catchlongpress="copyIt">
+        <view class="weui-cell__hd">
+          <image src="/images/tel.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">{{item.name}}</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}} '>{{item.tel}}</view>
+      </view>
+    </view>
+    
+  </view> -->
+  <button open-type="share" class="login-btn">
+    <text>分享学校通讯录给同学</text>
+  </button>
   <view class="weui-footer">
     <view class="weui-footer__links">
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
