--- a/pages/tel/departmentTel/departmentTel.wxss
+++ b/pages/tel/departmentTel/departmentTel.wxss
@@ -1,7 +1,75 @@
 /* pages/tel/departmentTel.wxss */
 @import "../../common/weui.wxss";
+
+Page {
+  background-color: #7acfa6;
+}
+
 .btnIcon {
   width: 26px;
   height: 26px;
   vertical-align: text-bottom;
+}
+
+.ykt-detail-wraper {
+  display: flex;
+  flex-direction: column;
+  margin: 0 30rpx 30rpx;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+}
+
+.ykt-detail {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10rpx;
+  overflow: hidden;
+}
+
+.ykt-head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120rpx;
+}
+
+.ykt-type-name {
+  font-size: 11pt;
+}
+
+.detail-list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 0 35rpx 10rpx;
+}
+
+.detail-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25rpx 5rpx 20rpx;
+  border-top: 1px solid #eee;
+}
+
+.detail-item-label {
+  color: #000;
+  width: 180pt;
+}
+
+.detail-item-value {
+  flex: 1;
+}
+
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
 }
