--- a/pages/welcome/welcome.wxss
+++ b/pages/welcome/welcome.wxss
@@ -1,11 +1,60 @@
 /* pages/welcome/welcome.wxss */
 @import "../common/weui.wxss";
 
+Page {
+  background-color: #7acfa6;
+}
+
 .userinfo-avatar {
   border-radius: 128rpx;
   clip-path: circle(50% at center);
   width: 160rpx;
   height: 160rpx;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+}
+
+.ykt-detail-wraper {
+  display: flex;
+  flex-direction: column;
+  margin: 0 30rpx 30rpx;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+}
+
+.detail-list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 0 35rpx 10rpx;
+}
+
+.detail-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25rpx 5rpx 20rpx;
+  border-top: 1px solid #eee;
+}
+
+.ykt-head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120rpx;
+}
+
+.ykt-type-name {
+  font-size: 11pt;
+}
+
+.detail-item-label {
+  color: #000;
+  width: 60pt;
+}
+
+.detail-item-value {
+  flex: 1;
 }
 
 .userinfo-nickname {
@@ -51,6 +100,18 @@
   width: 100%;
   flex-grow: 1;
   overflow-x: hidden;
+}
+
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
 }
 
 .page-body-wrapper {
