适当位置加上了广告

--- a/pages/Transport/Transport.wxss
+++ b/pages/Transport/Transport.wxss
@@ -17,6 +17,10 @@ image {
   padding-bottom: 0;
 }
 
+.ads {
+  padding: 30rpx 15rpx 30rpx 15rpx;
+}
+
 .weui-tab__content {
   /* padding-top: 30px;  */
   text-align: center;
