--- a/pages/features/features.wxss
+++ b/pages/features/features.wxss
@@ -1,6 +1,10 @@
 /* pages/features/features.wxss */
 @import "../common/weui.wxss";
 
+.ads {
+  padding: 30rpx 15rpx 30rpx 15rpx;
+}
+
 button::after {
   border: none;
 }
