--- a/pages/tel/departmentTel/departmentTel.wxml
+++ b/pages/tel/departmentTel/departmentTel.wxml
@@ -17,21 +17,14 @@
     </view>
     <view class="weui-cells__tips">外地用户请加拨天津长途区号 022</view>
   </view>
-  <!-- <view class="page__bd" style=' padding-bottom:0px; '>
-    <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callPhone ' catchlongpress="copyIt">
-        <view class="weui-cell__hd">
-          <image src="/images/tel.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
-        <view class="weui-cell__bd">{{item.name}}</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}} '>{{item.tel}}</view>
-      </view>
-    </view>
-    
-  </view> -->
   <button open-type="share" class="login-btn">
     <text>分享学校通讯录给同学</text>
   </button>
+  <!-- 广告位 -->
+  <view class='ads'>
+    <ad unit-id="adunit-62f52651dd5f4ff6"></ad>
+  </view>
+  <!-- 广告位结束 -->
   <view class="weui-footer">
     <view class="weui-footer__links">
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
