--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -37,11 +37,15 @@
             <view class="help-a">
               <text>学号：学号就是你的教务学号啊。</text>
               <text>密码：是您登录教务网查询课表、成绩的初始密码或者已更改密码</text>
-              <text>其中初始密码与个人身份证号码相关，通常默认密码是您的身份证号中包含的生日的部分或完整的身份证号码（含有x的大写）</text>
+              <text>其中初始密码与个人身份证号码相关，通常默认密码是您的身份证号中包含的生日的部分或完整的身份证号码（含有X的大写）</text>
             </view>
             <view class="help-q">2、忘记密码？</view>
             <view class="help-a">
-              <text>请携带学生证和身份证前往行政楼206重置密码</text>
+              <text>请携带学生证和身份证前往行政楼206重置教务密码</text>
+            </view>
+            <view class="help-q">3、大一萌新？暂时还没有学号😥</view>
+            <view class="help-a">
+              <text>请耐心等待学校教务部门注册学籍，办理学生证，然后你就有学号啦。（不要企图用你们的高考考生号登录成功）</text>
             </view>
           </view>
         </view>
